<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hmisdoctor.ui.emr_workflow.history.allergy.viewmodel.AllergyViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/hideLayout"
                android:weightSum="8">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/s_no"
                    android:textSize="17dp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.50"
                    android:gravity="center"
                    android:text="@string/date_time"
                    android:textSize="17dp"
                    android:drawableRight="@drawable/sort"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".80"
                    android:gravity="center"
                    android:text="@string/type"
                    android:textSize="17dp"
                    android:drawableRight="@drawable/sort"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/allergy"
                    android:textSize="17dp"
                    android:drawableRight="@drawable/sort"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.20"
                    android:gravity="center"
                    android:text="@string/source"
                    android:drawableRight="@drawable/sort"
                    android:textSize="17dp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.50"
                    android:gravity="center"
                    android:text="@string/duration"
                    android:drawableRight="@drawable/sort"
                    android:textSize="17dp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/severity"
                    android:drawableRight="@drawable/sort"
                    android:textSize="17dp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:text="@string/action"
                    android:textSize="17dp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/view" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:gravity="center"
                android:id="@+id/hideLayoutSub"
                android:background="@color/poweredBy"
                android:weightSum="8">
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:text="@string/hash"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.50"
                    android:textAlignment="center"
                    android:id="@+id/etAllergyDateTime"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/date_time"
                    />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80"
                    android:id="@+id/encounterTypeSpinner"
                    android:textAlignment="center"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/allergyNameSpinner"
                    android:textAlignment="center"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.20"
                    android:id="@+id/allergySourceSpinner"
                    android:textAlignment="center"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1.50"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/minusImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_minus" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/durationTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="1"
                            android:background="@drawable/background_underline"
                            android:textColor="@color/navColor"
                            android:textSize="17sp"
                            tools:ignore="HardcodedText,RtlSymmetry" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/plusImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_add_black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/durationRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:id="@+id/allergySeveritySpinner"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/poweredBy" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    app:srcCompat="@drawable/ic_add_blue"
                    android:id="@+id/addNewAllergyIconView"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/allergyRecyclerView"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noRecordsTextView"
                android:text="Currently no records!!"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_50sdp"/>

        </LinearLayout>
    </FrameLayout>
</layout>
